--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Favorite Animal</h1>
+
+<img src="panda.jpg" alt="Adorable panda munching on bamboo">
     <script type="text/javascript" src="./script.js">
 </script>
 
